# machineid-builds

./: .gitignore  CMakeLists.txt  README.md  libmachineid_shim.cpp  machineid_dotnet_shim.cpp  machineid_shim.cpp
.github/workflows/: ci.yml  release.yml
dotnet/: MachineId.csproj  MachineId.sln  MachineIdentifier.cs  NativeLibraryLoader.cs  README.md
dotnet/Example/: Example.csproj  Program.cs
dotnetExample/: Example.csproj  Program.cs
src/machineid/: machineid.cpp
